syntax = "proto3";

import "string.proto";
//import "userinfo.protos";
import "userinfo.proto";
import "message.proto";
import "video.proto";
import "video2.proto";

import "google/protobuf/empty.proto";


package protos;

option go_package = "douyinapi/protos/out";

// 用户服务
service MoguService {
  rpc StartCore (protos.String) returns (google.protobuf.Empty) {}
  // 基础信息用户
  rpc GetDftAddr (google.protobuf.Empty) returns (protos.String) {}
  rpc EditUserInfo (UserInfo) returns (google.protobuf.Empty) {}
  rpc GetUserInfo (protos.String) returns (UserInfo) {}
  rpc GetPanel (google.protobuf.Empty) returns (UserInfo) {}
  rpc GetContacts(GetContactsRequest) returns (Userinfolist) {}
  // 聊天消息
  rpc GetMsgContacts(GetMsgContactsRequest) returns (Userinfolist) {}
  rpc GetMsgList (GetMsgListRequest) returns (Messagelist) {}

  //   // 视频获取
   rpc MyVideo(MyVideoRequest)returns (VideoList){}
   rpc GetRecommendedVideos(VideoRequest) returns (VideoList) {}
   rpc PushVideo(Worksmsg) returns (google.protobuf.Empty){}
//   rpc GetFollowingVideos(VideoRequest) returns (VideoListResponse) {}
//   rpc GetPrivateVideos(VideoRequest) returns (VideoListResponse) {}
//   rpc GetHistoryVideos(HistoryRequest) returns (VideoListResponse) {}
  
//   // 互动功能
//   rpc GetVideoComments(CommentRequest) returns (CommentList) {}
//   rpc PostComment(NewComment) returns (Comment) {}
//   rpc LikeVideo(LikeRequest) returns (LikeStatus) {}
  
//   // 内容操作
//   rpc PublishVideo(stream VideoUpload) returns (PublishStatus) {}
//   rpc DeleteVideo(DeleteRequest) returns (OperationStatus) {}
//   rpc ReportVideo(ReportRequest) returns (OperationStatus) {}
  
//   // 扩展功能
//   rpc SearchVideos(SearchRequest) returns (VideoListResponse) {}
//   rpc GetVideoStream(StreamRequest) returns (stream VideoChunk) {}


  
}

message GetMsgContactsRequest {
  uint64 time = 1; // 最后通讯时间
  int32 size = 2;
}


message GetMsgListRequest {
  uint64 time = 1;
  int32 size = 2;
  string uid = 3;
}

message GetContactsRequest {
  string uid = 1; // 从这个用户开始，用户displayname
  int32 size = 2;
  CONTACT_TAG tag = 3; // 0 - 陌生人 1- 关注，2- 被关注，3- 好友（双向关注 // 4-黑名单
}

enum CONTACT_TAG {
  STRANGER = 0;
  FOLLOW = 1;
  FOLLOWED = 2;
  FRIEND = 3;
  BLACK = 4;
}


// ========== 请求/响应结构 ==========

message VideoRequest {
  int32 page_no = 1;
  int32 page_size = 2;
  VisibilityLevel visibility = 3;
}

message MyVideoRequest {
  uint64 formtime = 1; // 从新到旧
  int32 page_size = 2;  
}